--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,16 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "canvas": "^2.8.0",
+    "chart.js": "^3.6.0",
+    "chartjs": "^0.3.24",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.6",
     "socket.io-client": "^4.4.0",
     "web-vitals": "^1.1.2",
     "websocket": "^1.0.34"
