added logo svg animation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "node": "^17.1.0",
     "nodemon": "^2.0.15",
+    "react-anime": "^4.1.1",
     "ws": "^8.2.3",
     "wscat": "^5.0.0"
   }
