--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^6.0.13",
     "node": "^17.1.0",
     "nodemon": "^2.0.15",
     "react-anime": "^4.1.1",
