--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "canvas": "^2.8.0",
     "chart.js": "^3.6.0",
     "chartjs": "^0.3.24",
+    "firebase": "^9.5.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^4.0.0",
