--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "homepage": "https://github.com/davidhannn/Crypto-Live#readme",
   "dependencies": {
+    "@mui/icons-material": "^5.2.0",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "material-ui": "^0.20.2",
     "mongoose": "^5.13.12",
     "node": "^17.1.0",
     "nodemon": "^2.0.15",
